# OmniTiles

./: .gitignore  .readthedocs.yaml  LICENSE  README.md
gui/: CLAUDE.md  README.md  advanced.py  app.py  connection.py  fake_tile.py  main.py  mapping.py  p16_base.stl  p16_shaft.stl  presets.py  pyproject.toml  scene.py  sidebar.py  state.py  t16_base.stl  t16_carriage.stl
omnitiles/: CLAUDE.md  Cargo.toml  Embed.toml  README.md
omnitiles/.cargo/: config.toml
omnitiles/doc/: .rustc_info.json
omnitiles/doc/thumbv7em-none-eabihf/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
omnitiles/src/: lib.rs  main.rs
omnitiles/src/control/: base_controller.rs  lift_controller.rs  linear_controller.rs  mecanum.rs  mod.rs  pid.rs
omnitiles/src/drivers/: actuonix_linear.rs  can_motor.rs  drv8873.rs  fit0185.rs  gim6010.rs  lsm6dsv16x.rs  mod.rs  p16p.rs  spi_motor.rs  tb6612.rs  vl53l0x.rs
omnitiles/src/hw/: adc.rs  can.rs  encoder.rs  i2c.rs  led.rs  mod.rs  pins.rs  pins_devboard.rs  pins_f767zi.rs  pins_v1.rs  pins_v2.rs  spi.rs  usart.rs
omnitiles/src/motors/: lift_motor.rs  mod.rs  tilt_motor.rs
omnitiles/src/protocol/: messages.rs  mod.rs  parser.rs
sdk/: README.md  pyproject.toml
sdk/docs/: conf.py  index.md  multi_tile.md  protocol.md  quickstart.md
sdk/docs/api/: fleet.rst  hardware.rst  index.rst  protocol.rst  sync.rst  telemetry.rst  tile.rst  uwb.rst
sdk/examples/: blink_m1.py  log_telemetry.py  multi_tile_wave.py
sdk/src/omnitiles/: __init__.py  fleet.py  hardware.py  sync.py  telemetry.py  tile.py  transport.py  uwb.py
sdk/src/omnitiles/protocol/: __init__.py  (+3 more)
sdk/tests/: test_protocol.py  test_uwb.py
(+562 files in other folders)
