[project]
name = "gui"
version = "0.1.0"
description = "OmniTiles debug GUI (Viser web UI on top of the omnitiles SDK)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "omnitiles-sdk",
    "numpy>=1.26",
    "trimesh>=4.11.1",
    "viser>=1.0.19",
]

[tool.uv.sources]
omnitiles-sdk = { path = "../sdk", editable = true }
