[project]
name = "omnitiles-sdk"
version = "0.1.0"
description = "Python SDK for the OmniTiles robotics testing platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Christopher Liu" }]
license = { text = "MIT" }
dependencies = [
    "bleak>=2.1.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.4",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnitiles"]
